fix: remove overflow css rule.

--- a/src/components/Layout/index.scss
+++ b/src/components/Layout/index.scss
@@ -91,7 +91,6 @@
             min-width: fit-content;
             animation: pulse 1s;
             font-size: 15px;
-            overflow: scroll;
 
             &:nth-of-type(1) {
                 animation-delay: 1.1s;
